add base repository

--- a/Yunt/Yunt.TaskManager.Model/Yunt.TaskManager.Model.csproj
+++ b/Yunt/Yunt.TaskManager.Model/Yunt.TaskManager.Model.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Remove="TaskContextFactory.cs" />
+    <Compile Remove="TaskManagerContext - 复制.cs" />
   </ItemGroup>
 
   <ItemGroup>
