--- a/Yunt/Yunt.Common/Yunt.Common.csproj
+++ b/Yunt/Yunt.Common/Yunt.Common.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="NewLife.Core" Version="6.6.6631.1417" />
   </ItemGroup>
 
 </Project>
