--- a/Yunt/Yunt.TaskManager.Repository.EF/Yunt.TaskManager.Repository.EF.csproj
+++ b/Yunt/Yunt.TaskManager.Repository.EF/Yunt.TaskManager.Repository.EF.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.Extensions.ToSql" Version="2.0.0-rtm-10002" />
   </ItemGroup>
 
   <ItemGroup>
