--- a/Yunt/Yunt.Auth.Repository.EF/Yunt.Auth.Repository.EF.csproj
+++ b/Yunt/Yunt.Auth.Repository.EF/Yunt.Auth.Repository.EF.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper.Collection.LinqToSQL" Version="3.1.3" />
     <PackageReference Include="AutoMapper.Extensions" Version="1.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+    <PackageReference Include="EasyCaching.Redis" Version="0.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
@@ -21,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Yunt.Auth.Domain\Yunt.Auth.Domain.csproj" />
     <ProjectReference Include="..\Yunt.Common\Yunt.Common.csproj" />
+    <ProjectReference Include="..\Yunt.Redis\Yunt.Redis.csproj" />
   </ItemGroup>
 
 </Project>
