--- a/Yunt/Yunt.Auth.Repository.EF/Yunt.Auth.Repository.EF.csproj
+++ b/Yunt/Yunt.Auth.Repository.EF/Yunt.Auth.Repository.EF.csproj
@@ -4,13 +4,16 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>G:\2018\Yunt\Yunt\Yunt.Demo.ConsoleApp1\bin\Debug\</OutputPath>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.2.2" />
-    <PackageReference Include="AutoMapper.Collection.EntityFramework" Version="3.1.3" />
-    <PackageReference Include="AutoMapper.Collection.LinqToSQL" Version="3.1.3" />
     <PackageReference Include="AutoMapper.Extensions" Version="1.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
-    <PackageReference Include="EasyCaching.Redis" Version="0.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
