--- a/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
+++ b/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
@@ -1,3 +1,8 @@
 ﻿{
-
+  "AppSettings": {
+    "Auth": {
+      "RedisConn": "127.0.0.1:6377",
+      "MySqlConn": "server=10.1.5.25;port=3306;database=yunt_test;uid=root;pwd=unitoon2017;"
+    }
+  }
 }
