--- a/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
+++ b/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
@@ -84,6 +84,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="DeviceContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.json" />
   </ItemGroup>
 
