数据接口初始化+jwt

--- a/Yunt/Yunt.Inventory.Repository.EF/Yunt.Inventory.Repository.EF.csproj
+++ b/Yunt/Yunt.Inventory.Repository.EF/Yunt.Inventory.Repository.EF.csproj
@@ -3,7 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>G:\2018\Yunt\Yunt\commondll\</OutputPath>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="AutoMapper.Extensions" Version="1.0.0" />
