--- a/Yunt/Yunt.WebApi/appsettings.json
+++ b/Yunt/Yunt.WebApi/appsettings.json
@@ -1,4 +1,18 @@
 ﻿{
+  "Logging": {
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    }
+  },
+
   "AppSettings": {
     "Auth": {
       "RedisConn": "127.0.0.1:6379",
