--- a/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
+++ b/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
@@ -115,6 +116,7 @@
     <ProjectReference Include="..\Yunt.Auth.Domain\Yunt.Auth.Domain.csproj" />
     <ProjectReference Include="..\Yunt.Demo.Core\Yunt.Demo.Core.csproj" />
     <ProjectReference Include="..\Yunt.Device.Domain\Yunt.Device.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Inventory.Repository.EF\Yunt.Inventory.Repository.EF.csproj" />
     <ProjectReference Include="..\Yunt.Redis\Yunt.Redis.csproj" />
     <ProjectReference Include="..\Yunt.TaskManager.Core\Yunt.TaskManager.Core.csproj" />
   </ItemGroup>
