--- a/Yunt/Yunt.Device.Repository.EF/Yunt.Device.Repository.EF.csproj
+++ b/Yunt/Yunt.Device.Repository.EF/Yunt.Device.Repository.EF.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>G:\2018\Yunt\Yunt\Yunt.Demo.ConsoleApp1\bin\Debug\</OutputPath>
+    <OutputPath>G:\2018\Yunt\Yunt\commondll\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
