--- a/Yunt/Yunt.WebApi/Properties/launchSettings.json
+++ b/Yunt/Yunt.WebApi/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   //  "windowsAuthentication": false,
   //  "anonymousAuthentication": true,
   //  "iisExpress": {
-  //    "applicationUrl": "http://localhost:56983/",
+  //    "applicationUrl": "http://localhost:5200/",
   //    "sslPort": 0
   //  }
   //},
@@ -11,7 +11,7 @@
   //  "IIS Express": {
   //    "commandName": "IISExpress",
   //    "launchBrowser": true,
-  //    "launchUrl": "api/values",
+  //    "launchUrl": "swagger",
   //    "environmentVariables": {
   //      "ASPNETCORE_ENVIRONMENT": "Development"
   //    }
@@ -35,5 +35,5 @@
   //  },
   //  "applicationUrl": "http://localhost:5200/"
   //}
-//}
+}
 }
