--- a/Yunt/Yunt.Device.Domain/Yunt.Device.Domain.csproj
+++ b/Yunt/Yunt.Device.Domain/Yunt.Device.Domain.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="protobuf-net" Version="2.3.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Yunt.Common\Yunt.Common.csproj" />
+  </ItemGroup>
+
 </Project>
