--- a/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
+++ b/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "AppSettings": {
     "Auth": {
+      "IsStop": false,
       "RedisConn": "127.0.0.1:6379",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
