--- a/Yunt/Yunt.Common/Yunt.Common.csproj
+++ b/Yunt/Yunt.Common/Yunt.Common.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="NewLife.Core" Version="6.6.6631.1417" />
+    <PackageReference Include="SharpCompress" Version="0.20.0" />
   </ItemGroup>
 
   <ItemGroup>
