--- a/Yunt/Yunt.Demo.SendEmail/Yunt.Demo.SendEmail.csproj
+++ b/Yunt/Yunt.Demo.SendEmail/Yunt.Demo.SendEmail.csproj
@@ -5,11 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Quartz" Version="3.0.3" />
+    <Compile Remove="SendEmailJob_2.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Yunt.Demo.Core\Yunt.Demo.Core.csproj" />
+    <PackageReference Include="Quartz" Version="3.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Yunt.Dtsc.Core\Yunt.Dtsc.Core.csproj" />
   </ItemGroup>
 
 </Project>
