--- a/Yunt/DeviceManager/DeviceManager.csproj
+++ b/Yunt/DeviceManager/DeviceManager.csproj
@@ -178,6 +178,12 @@
     <Content Include="Dll\CabinetParamter.xls">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="File\configure.v0.2.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="File\configure.v0.2.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
