--- a/Yunt/Yunt.Common/Yunt.Common.csproj
+++ b/Yunt/Yunt.Common/Yunt.Common.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="SharpCompress" Version="0.20.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.DependencyModel">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencymodel\2.0.0\lib\netstandard1.6\Microsoft.Extensions.DependencyModel.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
