--- a/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
+++ b/Yunt/Yunt.Demo.ConsoleApp1/appsettings.json
@@ -29,6 +29,11 @@
       "RedisConn": "127.0.0.1:6379",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
+    },
+    "Xml": {
+      "RedisConn": "119.23.243.83:26125",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;",
+      "RedisPwd": "Unitoon2018"
     }
   }
 }
