--- a/Yunt/Yunt.IDC/appsettings.json
+++ b/Yunt/Yunt.IDC/appsettings.json
@@ -12,26 +12,26 @@
     }
   },
   "AppSettings": {
-    "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.0",
+    "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.0", // /data1/services/common
 
     "Auth": {
       "IsStop": false,
-      "RedisConn": "127.0.0.1:6379",
+      "RedisConn": "119.23.243.83:26125",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
     "Device": {
-      "RedisConn": "127.0.0.1:6379",
+      "RedisConn": "119.23.243.83:26125",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;pooling=true;",
       "RedisPwd": "Unitoon2018"
     },
     "Inventory": {
-      "RedisConn": "127.0.0.1:6379",
+      "RedisConn": "119.23.243.83:26125",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
     "Xml": {
-      "RedisConn": "127.0.0.1:6379",
+      "RedisConn": "119.23.243.83:26125",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
