--- a/Yunt/Dtsc.NodeService/appsettings.json
+++ b/Yunt/Dtsc.NodeService/appsettings.json
@@ -19,14 +19,14 @@
   },
   "AppSettings": {
     "NodeId": 1,
-    "JobPath": "G:\\2018\\Yunt\\Yunt\\Yunt.Jobs",
+    "JobPath": "G:\\2018\\Yunt\\Yunt\\Yunt.Jobs", // /data1/dtsc/jobs
     "Dtsc": {
-      "RedisConn": "47.97.5.85:6381", //47.97.5.85:6381
+      "RedisConn": "127.0.0.1:26125", //47.97.5.85:6381
       //"MySqlConn": "server=10.1.5.25;port=3306;database=yunt_device;uid=root;pwd=unitoon2017;",
       "RedisPwd": "Unitoon2018"
     },
     //All = 0, "Debug" "=",1,"Info" "=",2,"Warn" "=",3, "Error" "=",4,"Fatal" "=",5, "Off" "=",255
-    "LogLevel": "2",
+    "LogLevel": "3",
     "PerformanceInverval": "60"
   },
 
