--- a/Yunt/Yunt.IDC/appsettings.json
+++ b/Yunt/Yunt.IDC/appsettings.json
@@ -35,6 +35,11 @@
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
+    "Analysis": {
+      "RedisConn": "119.23.243.83:26125",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;",
+      "RedisPwd": "Unitoon2018"
+    },
     "MqDealEnable": true
   },
   "Logging": {
