--- a/Yunt/Yunt.WebApi/Yunt.WebApi.csproj
+++ b/Yunt/Yunt.WebApi/Yunt.WebApi.csproj
@@ -53,12 +53,17 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Yunt.Analysis.Domain\Yunt.Analysis.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Analysis.Repository.EF\Yunt.Analysis.Repository.EF.csproj" />
     <ProjectReference Include="..\Yunt.Auth.Domain\Yunt.Auth.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Auth.Repository.EF\Yunt.Auth.Repository.EF.csproj" />
     <ProjectReference Include="..\Yunt.Common\Yunt.Common.csproj" />
     <ProjectReference Include="..\Yunt.Device.Domain\Yunt.Device.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Device.Repository.EF\Yunt.Device.Repository.EF.csproj" />
     <ProjectReference Include="..\Yunt.Inventory.Domain\Yunt.Inventory.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Inventory.Repository.EF\Yunt.Inventory.Repository.EF.csproj" />
     <ProjectReference Include="..\Yunt.MQ\Yunt.MQ.csproj" />
     <ProjectReference Include="..\Yunt.Xml.Domain\Yunt.Xml.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Xml.Repository.EF\Yunt.Xml.Repository.EF.csproj" />
   </ItemGroup>
 
   <ItemGroup>
