--- a/Yunt/Yunt.Common/Yunt.Common.csproj
+++ b/Yunt/Yunt.Common/Yunt.Common.csproj
@@ -12,18 +12,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.EventSource" Version="2.0.2" />
     <PackageReference Include="NewLife.Core" Version="7.0.6712.2419" />
     <PackageReference Include="protobuf-net" Version="2.3.7" />
     <PackageReference Include="SharpCompress" Version="0.20.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.Extensions.DependencyModel">
-      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencymodel\2.0.0\lib\netstandard1.6\Microsoft.Extensions.DependencyModel.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
