--- a/Yunt/Yunt.IDC/Yunt.IDC.csproj
+++ b/Yunt/Yunt.IDC/Yunt.IDC.csproj
@@ -40,10 +40,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Yunt.Analysis.Domain\Yunt.Analysis.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Analysis.Repository.EF\Yunt.Analysis.Repository.EF.csproj" />
     <ProjectReference Include="..\Yunt.Common\Yunt.Common.csproj" />
     <ProjectReference Include="..\Yunt.Device.Domain\Yunt.Device.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Device.Repository.EF\Yunt.Device.Repository.EF.csproj" />
     <ProjectReference Include="..\Yunt.MQ\Yunt.MQ.csproj" />
     <ProjectReference Include="..\Yunt.Xml.Domain\Yunt.Xml.Domain.csproj" />
+    <ProjectReference Include="..\Yunt.Xml.Repository.EF\Yunt.Xml.Repository.EF.csproj" />
   </ItemGroup>
 
 </Project>
