--- a/Yunt/Yunt.WebApi/Properties/launchSettings.json
+++ b/Yunt/Yunt.WebApi/Properties/launchSettings.json
@@ -1,12 +1,12 @@
-{
-  //"iisSettings": {
-  //  "windowsAuthentication": false,
-  //  "anonymousAuthentication": true,
-  //  "iisExpress": {
-  //    "applicationUrl": "http://localhost:5200/",
-  //    "sslPort": 0
-  //  }
-  //},
+//{
+//  "iisSettings": {
+//    "windowsAuthentication": false,
+//    "anonymousAuthentication": true,
+//    "iisExpress": {
+//      "applicationUrl": "http://10.1.5.102:5202/",
+//      "sslPort": 44310
+//    }
+//  },
   //"profiles": {
   //  "IIS Express": {
   //    "commandName": "IISExpress",
@@ -23,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://10.1.5.102:5200/"
+      "applicationUrl": "http://10.1.5.102:5200/" //http://10.1.5.102:5200/
     }
   }
   //"Yunt.WebApi": {
