--- a/Yunt/Yunt.XmlCheck/appsettings.json
+++ b/Yunt/Yunt.XmlCheck/appsettings.json
@@ -1,28 +1,46 @@
 {
+  "connectionStrings": {
+    "yunt.dtsc": {
+      "providerName": "MySql.Data.MySqlClient",
+      "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_dtsc;uid=wdd;pwd=Unitoon2018;"
+
+    },
+    "yunt_xml": {
+      "providerName": "MySql.Data.MySqlClient",
+      "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;"
+
+    }
+  },
   "AppSettings": {
+    "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.1", // /data1/services/common
+
     "Auth": {
       "IsStop": false,
-      "RedisConn": "127.0.0.1:6379",
+      "RedisConn": "119.23.243.83:26125",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
     "Device": {
-      "RedisConn": "127.0.0.1:6379",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;",
+      "RedisConn": "119.23.243.83:26125",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;pooling=true;",
       "RedisPwd": "Unitoon2018"
     },
-    "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.1",
     "Inventory": {
-      "RedisConn": "127.0.0.1:6379",
+      "RedisConn": "119.23.243.83:26125",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
-    "MqDealEnable": true,
     "Xml": {
-      "RedisConn": "127.0.0.1:6379",
+      "RedisConn": "119.23.243.83:26125",
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
-    }
+    },
+    "Analysis": {
+      "RedisConn": "119.23.243.83:26125",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;",
+      "RedisPwd": "Unitoon2018"
+    },
+    "MqDealEnable": true
   },
   "Logging": {
     "IncludeScopes": true,
@@ -48,7 +66,8 @@
       "Default": "Information",
       "System": "Information",
       "Microsoft": "Information",
-      "Dtsc.NodeService": "Debug"
+      "service": "Debug",
+      "logtest": "Debug"
     },
     //log需要写入的文件。
     "Path": {
