--- a/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
+++ b/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
@@ -18,11 +18,11 @@
     <Compile Remove="doubletoothrollcrusher\**" />
     <Compile Remove="impactcrusher2\**" />
     <Compile Remove="impactcrusher\**" />
+    <Compile Remove="Inventory-Migrations\**" />
     <Compile Remove="jawcrusher2\**" />
     <Compile Remove="jawcrusher\**" />
     <Compile Remove="materialfeeder2\**" />
     <Compile Remove="materialfeeder\**" />
-    <Compile Remove="Migrations\**" />
     <Compile Remove="models\**" />
     <Compile Remove="pulverizer2\**" />
     <Compile Remove="reverhammercrusher2\**" />
@@ -34,7 +34,6 @@
     <Compile Remove="verticalcrusher\**" />
     <Compile Remove="vibrosieve2\**" />
     <Compile Remove="vibrosieve\**" />
-    <Compile Remove="Xml-migrations\**" />
     <EmbeddedResource Remove="Analysis-Migrations\**" />
     <EmbeddedResource Remove="Auth-Migrations\**" />
     <EmbeddedResource Remove="conecrusher2\**" />
@@ -47,11 +46,11 @@
     <EmbeddedResource Remove="doubletoothrollcrusher\**" />
     <EmbeddedResource Remove="impactcrusher2\**" />
     <EmbeddedResource Remove="impactcrusher\**" />
+    <EmbeddedResource Remove="Inventory-Migrations\**" />
     <EmbeddedResource Remove="jawcrusher2\**" />
     <EmbeddedResource Remove="jawcrusher\**" />
     <EmbeddedResource Remove="materialfeeder2\**" />
     <EmbeddedResource Remove="materialfeeder\**" />
-    <EmbeddedResource Remove="Migrations\**" />
     <EmbeddedResource Remove="models\**" />
     <EmbeddedResource Remove="pulverizer2\**" />
     <EmbeddedResource Remove="reverhammercrusher2\**" />
@@ -63,7 +62,6 @@
     <EmbeddedResource Remove="verticalcrusher\**" />
     <EmbeddedResource Remove="vibrosieve2\**" />
     <EmbeddedResource Remove="vibrosieve\**" />
-    <EmbeddedResource Remove="Xml-migrations\**" />
     <None Remove="Analysis-Migrations\**" />
     <None Remove="Auth-Migrations\**" />
     <None Remove="conecrusher2\**" />
@@ -76,11 +74,11 @@
     <None Remove="doubletoothrollcrusher\**" />
     <None Remove="impactcrusher2\**" />
     <None Remove="impactcrusher\**" />
+    <None Remove="Inventory-Migrations\**" />
     <None Remove="jawcrusher2\**" />
     <None Remove="jawcrusher\**" />
     <None Remove="materialfeeder2\**" />
     <None Remove="materialfeeder\**" />
-    <None Remove="Migrations\**" />
     <None Remove="models\**" />
     <None Remove="pulverizer2\**" />
     <None Remove="reverhammercrusher2\**" />
@@ -92,7 +90,6 @@
     <None Remove="verticalcrusher\**" />
     <None Remove="vibrosieve2\**" />
     <None Remove="vibrosieve\**" />
-    <None Remove="Xml-migrations\**" />
   </ItemGroup>
 
   <ItemGroup>
