create serviceprovider's pool  manager

--- a/Yunt/Yunt.WebApi/appsettings.json
+++ b/Yunt/Yunt.WebApi/appsettings.json
@@ -18,27 +18,27 @@
     "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.1", // /data1/services/apicommon
     "Auth": {
       "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_auth;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
       "RedisPwd": "Unitoon2018"
     },
     "Device": {
       "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
       "RedisPwd": "Unitoon2018"
     },
     "Inventory": {
       "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_inventory;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
       "RedisPwd": "Unitoon2018"
     },
     "Xml": {
       "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
       "RedisPwd": "Unitoon2018"
     },
     "Analysis": {
       "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;Connection Lifetime=10;",
       "RedisPwd": "Unitoon2018"
     }
   },
