--- a/Yunt/Yunt.IDA/appsettings.json
+++ b/Yunt/Yunt.IDA/appsettings.json
@@ -1,16 +1,4 @@
 {
-  "connectionStrings": {
-    "yunt.dtsc": {
-      "providerName": "MySql.Data.MySqlClient",
-      "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_dtsc;uid=wdd;pwd=Unitoon2018;"
-
-    },
-    "yunt_xml": {
-      "providerName": "MySql.Data.MySqlClient",
-      "connectionString": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;"
-
-    }
-  },
   "AppSettings": {
     "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.1", // /data1/services/common
 
@@ -22,7 +10,7 @@
     },
     "Device": {
       "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;pooling=true;",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
     "Inventory": {
@@ -40,6 +28,7 @@
       "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_analysis;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
-    "MqDealEnable": true
+    "MqDealEnable": true,
+    "MailList": "wubo@unitoon.cn,xuzh@unitoon.cn,yujf@sari.ac.cn,dongb@unitoon.cn,shuhr@unitoon.cn,liz@unitoon.cn,huangdb@unitoon.cn,lic@unitoon.cn,liumm@unitoon.cn"
   }
 }
