--- a/Yunt/Yunt.WebApi/appsettings.json
+++ b/Yunt/Yunt.WebApi/appsettings.json
@@ -1,4 +1,13 @@
 ﻿{
+  "InfluxDB": {
+    "IsOpen": true,
+    "DataBaseName": "AppMetricsDemo",
+    "ConnectionString": "http://192.168.6.250:8086",
+    "username": "root",
+    "password": "Unitoon2018",
+    "app": "RepairApp",
+    "env": "stage"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
