--- a/Yunt/Yunt.WebApi/Yunt.WebApi.csproj
+++ b/Yunt/Yunt.WebApi/Yunt.WebApi.csproj
@@ -36,6 +36,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="App.Metrics" Version="2.1.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Endpoints" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Reporting" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="2.0.0" />
     <PackageReference Include="AutoMapper" Version="7.0.0-alpha-0001" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="IdentityModel" Version="3.3.1" />
