mobile  shift add

--- a/Yunt/Yunt.WebApi/appsettings.json
+++ b/Yunt/Yunt.WebApi/appsettings.json
@@ -23,6 +23,8 @@
   },
 
   "AppSettings": {
+    "ShiftStartHour": 8,
+    "ShiftEndHour": 8,
     "Url": "119.23.243.83",
     "DllPath": "G:\\2018\\Yunt\\Yunt\\commondll\\netcoreapp2.1", // /data1/services/apicommon
     "Auth": {
