--- a/Yunt/Yunt.Inventory.Repository.EF/Yunt.Inventory.Repository.EF.csproj
+++ b/Yunt/Yunt.Inventory.Repository.EF/Yunt.Inventory.Repository.EF.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>G:\2018\Yunt\Yunt\commondll\</OutputPath>
+    <OutputPath></OutputPath>
   </PropertyGroup>
   
   <ItemGroup>
