mailpush.app add mail

--- a/Yunt/Yunt.Inventory.Repository.EF/Yunt.Inventory.Repository.EF.csproj
+++ b/Yunt/Yunt.Inventory.Repository.EF/Yunt.Inventory.Repository.EF.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath></OutputPath>
+    <OutputPath>bin\Debug\netcoreapp2.1\</OutputPath>
   </PropertyGroup>
   
   <ItemGroup>
