--- a/Yunt/Yunt.Analysis.Domain/Yunt.Analysis.Domain.csproj
+++ b/Yunt/Yunt.Analysis.Domain/Yunt.Analysis.Domain.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>bin\Debug\netcoreapp2.1\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Model\AiLog.cs" />
     <Compile Remove="Model\DiHistory.cs" />
