--- a/Yunt/Yunt.Auth.Repository.EF/Yunt.Auth.Repository.EF.csproj
+++ b/Yunt/Yunt.Auth.Repository.EF/Yunt.Auth.Repository.EF.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath></OutputPath>
+    <OutputPath>bin\Debug\netcoreapp2.1\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
